added another column to my html

--- a/index.html
+++ b/index.html
@@ -106,6 +106,28 @@
               </p>
               <a href="projects.html" target="_blank">Learn More</a>
             </div>
+            <div class="col-6">
+              <h2>React Weather App</h2>
+              <p class="mt-3 mb-5">
+                I created a responsive Weather App using React and
+                React-Bootstrap to deliver real-time weather updates in a clean,
+                user-friendly interface. The app fetches weather data from an
+                external API and displays it with intuitive components such as
+                cards, buttons, and grids styled using React-Bootstrap. It
+                features search functionality for any city, dynamic weather
+                icons, and temperature details, all wrapped in a modern,
+                mobile-responsive layout. This project helped me strengthen my
+                skills in React, API integration, and component-based UI design.
+              </p>
+              <a href="projects.html" target="_blank">Learn More</a>
+            </div>
+            <div class="col-6">
+              <img
+                src="images/Screen Shot 2025-07-27 at 2.27.21 PM.png"
+                alt="react-weather-app"
+                class="img-fluid"
+              />
+            </div>
           </div>
         </section>
       </main>
