added the contents of about page

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <div class="container-fluid">
       <nav class="nav nav-bar d-flex justify-content-between">
         <div>
-          <a href="/"
+          <a href="#"
             ><img src="images/logo2.png" class="img-fluid logo" alt="logo"
           /></a>
         </div>
         <div class="d-flex justify-content-between mt-3 links">
           <div>
-            <span><a href="/" target="_blank">Home</a></span>
-            <span><a href="/" target="_blank">About</a></span>
+            <span><a href="#" target="_blank">Home</a></span>
+            <span><a href="about.html">About</a></span>
             <span><a href="projects.html" target="_blank">Projects</a></span>
             <span><a href="/" target="_blank">CV</a></span>
             <span><a href="/" target="_blank">contact</a></span>
@@ -47,14 +47,15 @@
       </nav>
       <header>
         <h2>Hi,</h2>
-        <h1>Mahdia Khamoosh</h1>
-        <h3>Front-end developer based on Kabul, Afghanistan</h3>
+        <h1>I'm Mahdia Khamoosh</h1>
+        <h3>Front-end developer based in Afghanistan</h3>
         <div class="about-me mt-5">
           <a href="about.html" target="_blank">About me</a>
         </div>
       </header>
       <main>
         <section class="first-section-fluid">
+          <h3 class="text-center mb-5">Check Some of My featured projects</h3>
           <div class="row g-5">
             <div class="col-md-6">
               <img
