--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/about.css" />
-    <title>Document</title>
+    <title>About Me</title>
   </head>
   <body>
     <div class="container-fluid">
@@ -64,6 +64,51 @@
               class="img-fluid"
             />
           </div>
+        </section>
+        <section class="about-section-fluid">
+          <h1 class="text-center">My Skills</h1>
+          <div class="my-skills grid grid-3-columns mt-5 text-center">
+            <div>
+              <i class="fa-brands fa-html5"></i>
+              <div class="skills-title">Html</div>
+            </div>
+            <div>
+              <i class="fa-brands fa-css3"></i>
+              <div class="skills-title">Css</div>
+            </div>
+            <div>
+              <i class="fa-brands fa-java"></i>
+              <div class="skills-title">Javascript</div>
+            </div>
+            <div>
+              <i class="fa-brands fa-react"></i>
+              <div class="skills-title">React.js</div>
+            </div>
+            <div>
+              <i class="fa-brands fa-bootstrap"></i>
+              <div class="skills-title">Bootstrap</div>
+            </div>
+            <div>
+              <i class="fa-solid fa-mobile-screen-button"></i>
+              <div class="skills-title">Responsive</div>
+            </div>
+            <div>
+              <i class="fa-brands fa-git-alt"></i>
+              <div class="skills-title">Git</div>
+            </div>
+
+            <div>
+              <i class="fa-brands fa-github"></i>
+              <div class="skills-title">React.js</div>
+            </div>
+            <div>
+              <i class="fa-solid fa-laptop-code"></i>
+              <div class="skills-title">VSCode</div>
+            </div>
+          </div>
+          <p class="tech text-center mt-5">
+            <strong>Technologies: </strong> HTML, CSS, JavaScript, Bootstrap
+          </p>
         </section>
       </main>
       <footer>
