added the projects website page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="row g-5">
             <div class="col-md-6">
               <img
-                src="images/Screen Shot 2025-07-27 at 2.16.35 PM.png"
+                src="images/vanilla-weather-app.png"
                 alt="weather-app"
                 class="img-fluid"
               />
@@ -90,14 +90,14 @@
             </div>
             <div class="col-md-6">
               <img
-                src="images/Screen Shot 2025-07-27 at 2.22.29 PM.png"
+                src="images/clock-app.png"
                 class="img-fluid"
                 alt="clock-app"
               />
             </div>
             <div class="col-md-6">
               <img
-                src="images/Screen Shot 2025-07-27 at 2.23.54 PM.png"
+                src="images/AI-poem-generator.png"
                 alt="ai-poem-generator"
                 class="img-fluid"
               />
@@ -132,7 +132,7 @@
             </div>
             <div class="col-md-6">
               <img
-                src="images/Screen Shot 2025-07-27 at 2.27.21 PM.png"
+                src="images/react-weather-app.png"
                 alt="react-weather-app"
                 class="img-fluid"
               />
