--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
 
             <div>
               <i class="fa-brands fa-github"></i>
-              <div class="skills-title">React.js</div>
+              <div class="skills-title">Github</div>
             </div>
             <div>
               <i class="fa-solid fa-laptop-code"></i>
