--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,99 @@
           </div>
         </div>
       </nav>
+
+      <section class="projects-section-fluid mt-5 mb-3">
+        <h1 class="mb-2">Take a look at what I've been working on!</h1>
+        <div class="grid grid-2-columns">
+          <div>
+            <img
+              src="images/clock.png"
+              alt="clock-app"
+              class="img-fluid project mt-5 mb-3"
+            />
+            <h2 class="heading mb-2">Clock App</h2>
+            <p class="mb-4">Built with HTML, CSS, and JavaScript</p>
+            <a href="https://worldbest-clock.netlify.app/" target="_blank"
+              >Lunch Project</a
+            >
+          </div>
+
+          <div>
+            <img
+              src="images/dictionary-app.png"
+              alt="dictionary-app"
+              class="img-fluid project mt-5 mb-3"
+            />
+            <h2 class="heading mb-2">Dictionary App</h2>
+            <p class="mb-4">Built with React develper tools</p>
+            <a
+              href="https://vanilla-dictionary-app.netlify.app/"
+              class="mb-5"
+              target="_blank"
+              >Lunch Project</a
+            >
+          </div>
+          <div>
+            <img
+              src="images/landaing-website.png"
+              alt="landing-page"
+              class="img-fluid project mb-3"
+            />
+            <h2 class="heading mb-2">Afghanitan Landing Page</h2>
+            <p class="mb-4">Built with HTML, CSS, JavaScript</p>
+            <a href="https://afghanistan-tourism.netlify.app/" target="_blank"
+              >Lunch Project</a
+            >
+          </div>
+
+          <div>
+            <img
+              src="images/AI-poem-generator.png"
+              alt="dictionary-app"
+              class="img-fluid project mb-3"
+            />
+            <h2 class="heading mb-2">AI Poem Generator</h2>
+            <p class="mb-4">Built with HTML, CSS, JavaScript and AI</p>
+            <a
+              href="https://afghan-ai-peom-generator.netlify.app/"
+              target="_blank"
+              >Lunch Project</a
+            >
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="email text-center mb-5">
+          <a href="mailto:fosoonryan601@gmail.com">fosoonryan601@gmail.com</a>
+        </div>
+        <div class="d-flex justify-content-center text-center contact-links">
+          <div>
+            <a href="https://github.com/Mahdia-123" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </div>
+          <div>
+            <a
+              href="https://www.linkedin.com/in/mahdia-khamoosh-a2abb9364"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+          <div>
+            <a href="mailto:fosoonryan601@gmail.com" target="_blank">
+              <i class="fa-regular fa-envelope"></i
+            ></a>
+          </div>
+        </div>
+        <p class="mt-5">
+          This website is coded by Mahdia Khamoosh and is
+          <span
+            ><a href="https://github.com/Mahdia-123/mahdia-khamoosh-portfolio"
+              >open-sourced</a
+            ></span
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
