added the certificate website page

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
     <div class="container-fluid">
       <nav class="nav nav-bar d-flex justify-content-between">
         <div>
-          <a href="#"
+          <a href="index.html"
             ><img src="images/logo2.png" class="img-fluid logo" alt="logo"
           /></a>
         </div>
@@ -39,7 +39,11 @@
             <span><a href="#" target="_blank">Home</a></span>
             <span><a href="about.html">About</a></span>
             <span><a href="projects.html" target="_blank">Projects</a></span>
-            <span><a href="/" target="_blank">CV</a></span>
+            <span
+              ><a href="achivement.html" target="_blank"
+                >Achivements/CV</a
+              ></span
+            >
             <span><a href="/" target="_blank">contact</a></span>
           </div>
         </div>
