--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             <span><a href="#" target="_blank">Home</a></span>
             <span><a href="about.html">About</a></span>
             <span><a href="projects.html" target="_blank">Projects</a></span>
-            <span><a href="/" target="_blank">CV</a></span>
+            <span
+              ><a href="achivement.html" target="_blank"
+                >Achivements/CV</a
+              ></span
+            >
             <span><a href="/" target="_blank">contact</a></span>
           </div>
         </div>
