--- a/achivement.html
+++ b/achivement.html
@@ -192,6 +192,38 @@
         </div>
       </section>
       <section id="achievements" class="achievements-section"></section>
+      <footer>
+        <div class="email text-center mb-5">
+          <a href="mailto:fosoonryan601@gmail.com">fosoonryan601@gmail.com</a>
+        </div>
+        <div class="d-flex justify-content-center text-center contact-links">
+          <div>
+            <a href="https://github.com/Mahdia-123" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </div>
+          <div>
+            <a
+              href="https://www.linkedin.com/in/mahdia-khamoosh-a2abb9364"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+          <div>
+            <a href="mailto:fosoonryan601@gmail.com" target="_blank">
+              <i class="fa-regular fa-envelope"></i
+            ></a>
+          </div>
+        </div>
+        <p class="mt-5">
+          This website is coded by Mahdia Khamoosh and is
+          <span
+            ><a href="https://github.com/Mahdia-123/mahdia-khamoosh-portfolio"
+              >open-sourced</a
+            ></span
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
