--- a/achivement.html
+++ b/achivement.html
@@ -191,7 +191,15 @@
           </a>
         </div>
       </section>
-      <section id="achievements" class="achievements-section"></section>
+      <section id="achievements" class="achievements-section">
+        <h2>My Resume</h2>
+        <div class="cv">
+          <a href="pdf-file/Mahdia-Khamoosh-CV.pdf" target="_blank"
+            >Click here to download
+            <span><i class="fa-solid fa-download"></i></span
+          ></a>
+        </div>
+      </section>
       <footer>
         <div class="email text-center mb-5">
           <a href="mailto:fosoonryan601@gmail.com">fosoonryan601@gmail.com</a>
