added a contact form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 >Achivements/CV</a
               ></span
             >
-            <span><a href="/" target="_blank">contact</a></span>
+            <span><a href="contact.html" target="_blank">contact</a></span>
           </div>
         </div>
       </nav>
