--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 >Achivements/CV</a
               ></span
             >
-            <span><a href="/" target="_blank">contact</a></span>
+            <span><a href="contact.html" target="_blank">contact</a></span>
           </div>
         </div>
       </nav>
