--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                 >Achivements/CV</a
               ></span
             >
-            <span><a href="/" target="_blank">contact</a></span>
+            <span><a href="contact.html" target="_blank">contact</a></span>
           </div>
         </div>
       </nav>
@@ -86,7 +86,7 @@
               alt="landing-page"
               class="img-fluid project mb-3"
             />
-            <h2 class="heading mb-2">Afghanitan Landing Page</h2>
+            <h2 class="heading mb-2">Afghanistan Landing Page</h2>
             <p class="mb-4">Built with HTML, CSS, JavaScript</p>
             <a href="https://afghanistan-tourism.netlify.app/" target="_blank"
               >Lunch Project</a
@@ -103,6 +103,32 @@
             <p class="mb-4">Built with HTML, CSS, JavaScript and AI</p>
             <a
               href="https://afghan-ai-peom-generator.netlify.app/"
+              target="_blank"
+              >Lunch Project</a
+            >
+          </div>
+          <div>
+            <img
+              src="images/vanilla-weather-app.png"
+              alt="vanilla-weather-app"
+              class="img-fluid project mb-3"
+            />
+            <h2 class="heading mb-2">Vanilla Weather App</h2>
+            <p class="mb-4">Built with HTML, CSS, JavaScript and API</p>
+            <a href="https://vanillasweatherapp.netlify.app/" target="_blank"
+              >Lunch Project</a
+            >
+          </div>
+          <div>
+            <img
+              src="images/react-weather-app.png"
+              alt="react-weather-app"
+              class="img-fluid project mb-3"
+            />
+            <h2 class="heading mb-2">React Weather App</h2>
+            <p class="mb-4">Built with React developer tools</p>
+            <a
+              href="https://vanilla-magical-weather-app.netlify.app/"
               target="_blank"
               >Lunch Project</a
             >
