--- a/achivement.html
+++ b/achivement.html
@@ -28,23 +28,42 @@
   </head>
   <body>
     <div class="container-fluid">
-      <nav class="nav nav-bar d-flex justify-content-between">
-        <div>
-          <a href="index.html"
-            ><img src="images/logo2.png" class="img-fluid logo" alt="logo"
+      <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="index.html"
+            ><img
+              src="images/logo2.png"
+              alt="portfolio-logo"
+              class="logo img-fluid"
           /></a>
-        </div>
-        <div class="d-flex justify-content-between mt-3 links wrapper">
-          <div>
-            <span><a href="#" target="_blank">Home</a></span>
-            <span><a href="about.html">About</a></span>
-            <span><a href="projects.html" target="_blank">Projects</a></span>
-            <span
-              ><a href="achivement.html" target="_blank"
-                >Achivements/CV</a
-              ></span
-            >
-            <span><a href="contact.html" target="_blank">contact</a></span>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="achivement.html">Achivements/CV</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="projects.html">Projects</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
