changed the nav bar toggler color

--- a/projects.html
+++ b/projects.html
@@ -152,6 +152,34 @@
               >Lunch Project</a
             >
           </div>
+          <div>
+            <img
+              src="images/Screen Shot 2025-08-07 at 5.05.39 PM.png"
+              alt="invoice and client manager app"
+              class="img-fluid project mb-3"
+            />
+            <h2 class="heading mb-2">Invoice Manager App</h2>
+            <p class="mb-4">Built with HTML, CSS and Javascript</p>
+            <a
+              href="https://freelance-invoice-manager-app.netlify.app/"
+              target="_blank"
+              >Lunch Project</a
+            >
+          </div>
+          <div>
+            <img
+              src="images/Screen Shot 2025-08-02 at 5.08.58 PM.png"
+              alt="React Agllery App"
+              class="img-fluid project mb-3"
+            />
+            <h2 class="heading mb-2">React Gallery App</h2>
+            <p class="mb-4">Built with React developer tools</p>
+            <a
+              href="https://nine-photo-gallery-app.netlify.app/"
+              target="_blank"
+              >Lunch Project</a
+            >
+          </div>
         </div>
       </section>
       <footer>
