added New project to my project page

--- a/projects.html
+++ b/projects.html
@@ -180,6 +180,20 @@
               >Lunch Project</a
             >
           </div>
+          <div>
+            <img
+              src="images/book tracker app.png"
+              alt="Book tracker App"
+              class="img-fluid project mb-3"
+            />
+            <h2 class="heading mb-2">Book Tracker App</h2>
+            <p class="mb-4">Built with HTML, CSS and JavaScript</p>
+            <a
+              href="https://book-tracker-app-for-all.netlify.app/"
+              target="_blank"
+              >Lunch Project</a
+            >
+          </div>
         </div>
       </section>
       <footer>
